# lavos

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  ci-script  main.cpp
android/common/: CMakeLists.txt  android_common.cpp  android_common.h  common.cpp  common.h
android/gltf/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/gltf/src/main/: AndroidManifest.xml
demos/: CMakeLists.txt
demos/2d/: 2d.cpp  CMakeLists.txt
demos/common/: CMakeLists.txt  demo_application.cpp  demo_application.h  shader_load.cpp  shader_load.h
demos/depthbuffer/: CMakeLists.txt  depthbuffer_application.cpp  depthbuffer_application.h
demos/depthbuffer/glsl/: texture.vert
demos/firstperson/: CMakeLists.txt  application.cpp  application.h  firstperson.cpp
demos/gltf/: CMakeLists.txt  application.cpp  application.h  gltf.cpp
demos/indexbuffer/: CMakeLists.txt  indexbuffer_application.cpp  indexbuffer_application.h
demos/indexbuffer/glsl/: color.vert
demos/mesh/: CMakeLists.txt  mesh_application.cpp  mesh_application.h
demos/mesh/glsl/: texture.frag  texture.vert
demos/point_cloud/: CMakeLists.txt  point_cloud.cpp
demos/qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
demos/qt_qvulkanwindow/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
demos/qt_qwindow/: CMakeLists.txt  lavos_renderer.cpp  lavos_renderer.h  lavos_window.cpp  lavos_window.h  main.cpp  mainwindow.cpp  mainwindow.h
demos/qt_shell/: CMakeLists.txt  lavos_renderer.cpp  lavos_renderer.h  main.cpp
demos/room/: CMakeLists.txt  room.cpp
demos/texture/: CMakeLists.txt  texture_application.cpp  texture_application.h
demos/texture/glsl/: texture.frag  texture.vert
demos/triangle/: CMakeLists.txt  main.cpp  triangle_application.cpp  triangle_application.h
demos/triangle/glsl/: triangle.vert
demos/uniformbuffer/: CMakeLists.txt  uniformbuffer_application.cpp  uniformbuffer_application.h
demos/uniformbuffer/glsl/: color.vert
demos/vertexbuffer/: CMakeLists.txt  vertexbuffer_application.cpp  vertexbuffer_application.h
engine/: CMakeLists.txt
engine/cmake/: ResourceGenerator.cmake  ResourceGenerator_header.h.in  ResourceGenerator_source.cpp.in
engine/glsl/: material_common_frag.glsl  material_common_vert.glsl  phong.frag  phong.vert  unlit.vert
engine/glsl/material/: common.glsl  common_camera.glsl  common_lighting.glsl  common_vert.glsl  phong.frag  phong.vert  unlit.frag  unlit.vert
engine/include/: asset_container.h  buffer.h  component.h  engine.h  glm_config.h  gltf_loader.h  image.h  material.h  material_instance.h  mesh.h  node.h  renderer.h  scene.h  shader_load.h  texture.h  transform_component.h  vertex.h
engine/include/component/: camera_component.h  component.h  directional_light_component.h  fp_controller_component.h  mesh_component.h  transform_component.h
engine/include/material/: material.h  material_instance.h  phong_material.h  unlit_material.h
engine/src/: asset_container.cpp  engine.cpp  glm_stream.h  gltf_loader.cpp  image.cpp  material.cpp  material_instance.cpp  mesh.cpp  mesh_component.cpp  node.cpp  renderer.cpp  scene.cpp  shader_load.cpp  texture.cpp  thirdparty_impl.cpp
engine/src/component/: directional_light_component.cpp  fp_controller_component.cpp  mesh_component.cpp  transform_component.cpp
engine/src/material/: material.cpp  material_instance.cpp  phong_material.cpp  unlit_material.cpp
lavos/: CMakeLists.txt
lavos/cmake/: FindShaderc.cmake  ResourceGenerator.cmake  ResourceGenerator_header.h.in  ResourceGenerator_source.cpp.in  ShaderResources.cmake  generate_resources_src.cmake.in
lavos/glsl/: common_glsl_cpp.h
lavos/glsl/lib/: msm.glsl
lavos/glsl/material/: common.glsl  common_camera.glsl  common_frag.glsl  common_lighting.glsl  common_vert.glsl  gouraud.frag  gouraud.vert  gouraud.vf.shader  lighting_phong.glsl  phong.frag  phong.vert  phong.vf.shader  point_cloud.frag  point_cloud.vert  point_cloud.vf.shader  shadow.frag  shadow.vert  shadow.vf.shader  unlit.vf.shader
lavos/include/: asset_container.h  engine.h  image.h  node.h  renderer.h  vertex.h
lavos/include/component/: camera_component.h  component.h  fp_controller_component.h  mesh_component.h  transform_component.h
lavos/include/lavos/: asset_container.h  buffer.h  engine.h  glm_config.h  image.h  light_collection.h  log.h  material_pipeline_manager.h  mesh.h  node.h  point_cloud.h  render_config.h  render_target.h  renderable.h  renderer.h  scene.h  shader_load.h  spot_light_shadow.h  spot_light_shadow_renderer.h  sub_renderer.h  swapchain.h  texture.h  vertex.h  vk_util.h
lavos/include/lavos/component/: camera.h  camera_component.h  component.h  directional_light.h  directional_light_component.h  fp_controller.h  fp_controller_component.h  mesh_component.h  point_cloud_component.h  spot_light.h  spot_light_component.h  transform_component.h
lavos/include/lavos/material/: gouraud_material.h  material.h  material_instance.h  phong_material.h  point_cloud_material.h  unlit_material.h
lavos/include/material/: material.h  material_instance.h  phong_material.h
lavos/src/: asset_container.cpp  buffer.cpp  engine.cpp  glm_stream.h  image.cpp  light_collection.cpp  log.cpp  material_pipeline_manager.cpp  mesh.cpp  node.cpp  render_config.cpp  render_target.cpp  renderer.cpp  scene.cpp  shader_load.cpp  spot_light_shadow.cpp  spot_light_shadow_renderer.cpp  sub_renderer.cpp  swapchain.cpp  texture.cpp  thirdparty_impl.cpp
lavos/src/component/: directional_light.cpp  directional_light_component.cpp  fp_controller.cpp  fp_controller_component.cpp  mesh_component.cpp  spot_light.cpp  spot_light_component.cpp  transform_component.cpp
lavos/src/material/: gouraud_material.cpp  material.cpp  material_instance.cpp  phong_material.cpp  point_cloud_material.cpp  unlit_material.cpp
shell/glfw/: CMakeLists.txt
shell/glfw/include/: window_application.h
shell/glfw/src/: window_application.cpp
shell/qt/: CMakeLists.txt
shell/qt/include/: lavos_window.h  platform.h
shell/qt/src/: lavos_window.cpp  platform.cpp
(+22 files in other folders)
